# BotNicolai

./: main.py  pyproject.toml
src/api/: get_holdet_data.py  get_rider_data.py  get_stages_data.py
src/data/: data_preprocessing.py
src/helpers/: misc.py
src/models/: rider.py  rider_value_model.py
src/models/rules/: rules.py
src/optimizer/: optimizer.py
