[tool.poetry]
name = "agent-holdet"
version = "0.1.0"
description = "holdets agent"
authors = ["Nicolai Piet Dittmann"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
procyclingstats = "^0.1.10"
pydantic = "^2.7.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
